<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AddItemActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/margin_8"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/add_title"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/itemCardFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title_layout">

            <LinearLayout
                android:id="@+id/addImageButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/additem_border"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_add_circle_outline_24"
                    app:tint="@color/primaryDarkColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="1dp"
                    android:gravity="center_vertical"
                    android:text="@string/addImage"
                    android:textColor="@color/primaryDarkColor"
                    android:textSize="16sp" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/imageViewItemImageLayout"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="16dp"
                android:elevation="0dp"
                android:visibility="gone"
                app:cardCornerRadius="16dp"
                app:layout_constraintTop_toBottomOf="@+id/title_layout">

                <ImageView
                    android:id="@+id/imageViewItemImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/placeholder"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:boxStrokeColor="@color/box_color"
            app:boxStrokeErrorColor="@color/error_color"
            app:layout_constraintTop_toBottomOf="@+id/itemCardFrameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/itemNameHint"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemPriceLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            app:boxStrokeColor="@color/box_color"
            app:boxStrokeErrorColor="@color/error_color"
            app:layout_constraintTop_toBottomOf="@+id/itemNameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextItemPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/itemPriceHint"
                android:maxLength="5"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemMemoLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            app:boxStrokeColor="@color/box_color"
            app:boxStrokeErrorColor="@color/error_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemPriceLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextItemMemo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/itemMemoHint"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/ratingItemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/itemRating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemMemoLayout" />

        <RatingBar
            android:id="@+id/ratingItemPriority"
            style="@style/Base.Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="false"
            android:max="5"
            android:numStars="5"
            android:progressTint="@color/primaryColor"
            android:stepSize="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingItemText" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F4F4F4"
        android:layout_marginBottom="@dimen/margin_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/completeButton"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/completeButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/button_background"
        android:elevation="0dp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/completeButton"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>